[gd_scene load_steps=12 format=3 uid="uid://dqls41ixt6eof"]

[ext_resource type="Script" path="res://Scripts/Characters/blue_slime.gd" id="1_cw8xx"]
[ext_resource type="Texture2D" uid="uid://ty6myklcc2b2" path="res://Materials/Characters/Slime_Blue-Sheet.png" id="2_pe44q"]
[ext_resource type="Script" path="res://Scripts/Characters/damage_alert_blue_slime.gd" id="3_cng0v"]
[ext_resource type="Theme" uid="uid://dmiibo8sbj620" path="res://Materials/Themes/SlimeHealthBar.tres" id="4_mu2nq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jr478"]
size = Vector2(45, 38)

[sub_resource type="Animation" id="Animation_tvypg"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_o2bmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qt5en"]
_data = {
"Idle": SubResource("Animation_tvypg"),
"RESET": SubResource("Animation_o2bmy")
}

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rq5a7"]
b = Vector2(-120, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_shwhd"]
a = Vector2(120, 0)
b = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sfd5"]
size = Vector2(53, 48)

[node name="BlueSlime" type="CharacterBody2D"]
script = ExtResource("1_cw8xx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jr478")
one_way_collision_margin = 0.0

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-1, -1)
texture = ExtResource("2_pe44q")
hframes = 2

[node name="Animation" type="AnimationPlayer" parent="CollisionShape2D"]
libraries = {
"": SubResource("AnimationLibrary_qt5en")
}

[node name="AlertLeft" type="Area2D" parent="."]

[node name="RangeLeft" type="CollisionShape2D" parent="AlertLeft"]
shape = SubResource("SegmentShape2D_rq5a7")

[node name="AlertRight" type="Area2D" parent="."]

[node name="RangeRight" type="CollisionShape2D" parent="AlertRight"]
shape = SubResource("SegmentShape2D_shwhd")

[node name="AlertDMG" type="Area2D" parent="."]
script = ExtResource("3_cng0v")

[node name="RangeDMG" type="CollisionShape2D" parent="AlertDMG"]
shape = SubResource("RectangleShape2D_5sfd5")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -40.0
offset_top = -42.0
offset_right = 41.0
offset_bottom = -30.0
theme = ExtResource("4_mu2nq")
max_value = 10.0
step = 1.0
value = 5.0
show_percentage = false

[connection signal="body_entered" from="AlertLeft" to="." method="_on_alert_left_body_entered"]
[connection signal="body_entered" from="AlertRight" to="." method="_on_alert_right_body_entered"]
[connection signal="body_entered" from="AlertDMG" to="AlertDMG" method="_on_body_entered"]
[connection signal="body_exited" from="AlertDMG" to="AlertDMG" method="_on_body_exited"]
